# stockchartsalerts

./: .coderabbit.yaml  .dockerignore  .editorconfig  .gitignore  .golangci.yml  .pre-commit-config.yaml  AGENTS.md  CONTRIBUTING.md  Cargo.toml  Containerfile  Dockerfile  Makefile  README.md  codecov.yaml  codemap.md  go.mod  pyproject.toml  renovate.json  run_bot.py  rust-toolchain.toml
.claude/: CLAUDE.md
.github/actions/setup-poetry-env/: action.yml
.github/workflows/: audit.yml  main.yml  opencode.yml
cmd/: codemap.md
cmd/stockchartsalerts/: codemap.md  main.go
internal/: codemap.md
internal/alerts/: alerts.go  alerts_test.go  codemap.md
internal/app/: app.go  app_test.go  codemap.md
internal/config/: codemap.md  settings.go  settings_test.go
internal/discord/: codemap.md  discord.go  discord_test.go
internal/httpx/: client.go  client_test.go  codemap.md
internal/stockcharts/: client.go  client_test.go  codemap.md
internal/telemetry/: codemap.md  logging.go  logging_test.go
internal/xerrors/: codemap.md  errors.go  errors_test.go
src/: alerts.rs  app.rs  config.rs  discord.rs  error.rs  http.rs  lib.rs  main.rs  stockcharts.rs  telemetry.rs
src/stockchartsalerts/: __init__.py  bot.py  config.py  models.py  run_bot.py
stockchartsalerts/: __init__.py  bot.py
tests/: test_bot.py  test_config.py
