[package]
name = "stockchartsalerts"
version = "0.1.0"
edition = "2024"
rust-version = "1.96"
description = "Bot for alerts from stockcharts.com"
license = "MIT"
repository = "https://github.com/major/stockchartsalerts"
readme = "README.md"

[dependencies]
chrono = { version = "0.4", default-features = false, features = ["clock", "std"] }
chrono-tz = "0.10"
clap = { version = "4.5", features = ["derive", "env"] }
reqwest = { version = "0.13", default-features = false, features = ["gzip", "json", "rustls-tls"] }
sentry = { version = "0.48", default-features = false, features = ["backtrace", "contexts", "panic", "reqwest", "rustls", "tracing"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
tokio = { version = "1.48", features = ["macros", "rt-multi-thread", "signal", "time"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }

[dev-dependencies]
mockito = "1.7"

[profile.release]
codegen-units = 1
lto = "thin"
strip = "symbols"
