[project]
name = "stockchartsalerts"
version = "0.0.1"
description = "Bot for alerts from stockcharts.com"
authors = [{ "name" = "Major Hayden", "email" = "major@mhtx.net" }]
repository = "https://github.com/major/stockchartsalerts"
documentation = "https://major.github.io/stockchartsalerts/"
readme = "README.md"
dependencies = [
  "discord-webhook (>=1.3.1,<2.0.0)",
  "schedule (>=1.2.2,<2.0.0)",
  "python-dateutil (>=2.9.0.post0,<3.0.0)",
  "pytz (>=2025.2,<2026.0)",
  "httpx (>=0.28.1,<0.29.0)",
]
requires-python = ">=3.13,<4.0"

[tool.poetry.group.dev.dependencies]
pytest = "8.4.1"
pytest-cov = "6.2.1"
mypy = "1.17.0"
pre-commit = "4.2.0"
tox = "4.27.0"
freezegun = "1.5.3"
pytest-sugar = "1.0.0"
pytest-randomly = "3.16.0"
pytest-httpx = "0.35.0"
types-python-dateutil = "^2.9.0.20241206"
types-pytz = "^2025.2.0.20250326"
ruff = "0.12.4"


[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
addopts = [
  "--cov=stockchartsalerts",
  "--cov-report=term-missing",
  "--cov-report=html",
  "--cov-report=xml",
  "--cov-branch",
  "--color=yes",
  "--verbose",
]
# Having problems with tests? Uncomment the following line to see more output.
# log_cli = false
# log_level = "DEBUG"
log_format = "%(asctime)s %(levelname)s %(message)s"
log_date_format = "%Y-%m-%d %H:%M:%S"
testpaths = ["tests"]

[tool.mypy]
files = ["stockchartsalerts"]
disallow_untyped_defs = true
disallow_any_unimported = true
no_implicit_optional = true
check_untyped_defs = true
warn_return_any = true
warn_unused_ignores = true
show_error_codes = true

[[tool.mypy.overrides]]
module = "discord_webhook"
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "mastodon"
ignore_missing_imports = true

[tool.ruff]
fix = true

[tool.ruff.format]
preview = true
