[project]
name = "stockchartsalerts"
version = "0.1.0"
description = "Bot for alerts from stockcharts.com"
readme = "README.md"
authors = [{ name = "Major Hayden", email = "major@mhtx.net" }]
requires-python = ">=3.13,<4.0"
dependencies = [
    "discord-webhook>=1.4.1",
    "httpx>=0.28.1",
    "python-dateutil>=2.9.0.post0",
    "pytz>=2025.2",
    "schedule>=1.2.2",
]

[tool.poetry.group.dev.dependencies]
pytest = "8.4.1"
pytest-cov = "6.2.1"
mypy = "1.17.1"
pre-commit = "4.2.0"
tox = "4.28.4"
freezegun = "1.5.4"
pytest-sugar = "1.0.0"
pytest-randomly = "3.16.0"
pytest-httpx = "0.35.0"
types-python-dateutil = "^2.9.0.20241206"
types-pytz = "^2025.2.0.20250326"
ruff = "0.12.8"


[build-system]
requires = ["uv_build>=0.8.4,<0.9.0"]
build-backend = "uv_build"

[dependency-groups]
dev = [
    "freezegun>=1.5.4",
    "pre-commit>=4.2.0",
    "pyright>=1.1.403",
    "pytest>=8.4.1",
    "pytest-cov>=6.2.1",
    "pytest-httpx>=0.35.0",
    "pytest-randomly>=3.16.0",
    "ruff>=0.12.7",
]

[tool.pytest.ini_options]
addopts = [
    "--cov=src",
    "--cov-report=term-missing",
    "--cov-report=html",
    "--cov-report=xml",
    "--cov-branch",
    "--color=yes",
    "--verbose",
]
# Having problems with tests? Uncomment the following line to see more output.
# log_cli = false
# log_level = "DEBUG"
log_format = "%(asctime)s %(levelname)s %(message)s"
log_date_format = "%Y-%m-%d %H:%M:%S"
testpaths = ["tests"]

[tool.pyright]
venvPath = "."
venv = ".venv"

[tool.ruff]
fix = true

[tool.ruff.format]
preview = true
